# powermeter

./: .gitignore  99-usb-serial.rules  LICENSE  README.md  dc_powermeter.conf  dc_powermeter.py  dc_powermeter.service  docker-compose.yml  install.sh  powermeter.conf  powermeter.py  powermeter.service  powermeter_config.json  powermeter_json.py  powermeter_json.yml  pyproject.toml
.github/workflows/: ci.yml
config/grafana-dashboards/: Overview.json  powermeter.json
config/powermeter/: influx.conf
config/systemd/: powermeter.service
config/udev/: 99-usb-serial.rules
config/zabbix_agent/: userparameter-powermeter.conf  userparameter-powermetter.conf
config/zabbix_server_templates/: zabbix_powermeter_templates_6_4.yaml  zabbix_powermeter_templates_7_0.yaml
doc/: hardware.md  influx_and_grafana.md  zabbix.md  zabbix_agent.md
grafana-dashboards/: History.json
powermeter/: core.py
scripts/: powermeter_influx.py  powermeter_json.py
src/powermeter/: __init__.py  core.py
zabbix_agentd.conf.d/: userparameter-dc_powermetter.conf  userparameter-powermetter.conf
