[project]
name = "powermeter"
version = "2.0.0"
description = "Reads current values from HDHK Modbus devices"
authors = [
    { name="Lukas Kaplan", email="lukas.kaplan@lkaplan.cz" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "pymodbus[serial]>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
